# tdk

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile.in  README.md  TclCompiler.tap.in  TdkPackages.tap.in  aclocal.m4  configure  configure.ac  external_pkgs.sh  package_location.tcl
.github/parameters/: setup-macports.yaml
.github/workflows/: build.yml
app/: debug_require.tcl  debug_source.tcl  dump_packages.tcl  dump_stack.tcl
app/check/: main.tcl
app/check/lib/app-check/: check_startup.tcl
app/comp/: main.tcl
app/comp/lib/app-comp/: comp_startup.tcl  procomp.tcl  procomp_config.tcl
app/comp/lib/comp-ui/: compiler.tcl
app/debug/: main.tcl
app/debug/lib/app-debug/: startup.tcl
app/inspector/: main.tcl
app/inspector/lib/: inspector.tcl
app/launch/: main.tcl
app/lsmfs/: main.tcl
app/tape/: main.tcl
app/tape/lib/app-tape/: tape_pot.tcl  tape_state.tcl
app/tclapp/: entry.tcl  main.tcl
app/tclapp/lib/tclapp-ui/: ipeditor.tcl  sieditor.tcl
app/tclsvc/: main.tcl  tclsvc.tcl
app/vfse/: main.tcl
app/vfse/lib/app-vfse/: vfse.tcl
app/xref/: main.tcl  xref.tcl
app/xref/lib/xref/: xref_gather.tcl
lib/appframe/: appframe.tcl
lib/checker/: checker.tcl
lib/checker/doc/: komodo_tcl_lint.tcl
lib/checker/tests/: checker.test  defs.tcl
lib/cmatch/: cmatch.tm
lib/dbg_engine/: dbg.tcl  instrument.tcl
lib/debugger/: checker.tcl  codeWin.tcl  gui.tcl
lib/debugger/tests/: blend.test  block.test  break.test  breakWin.test  initdebug.test  inspectorWin.test  instrument.test  nub.test  oratcl.test  proj.test  result.test  sybtcl.test  system.test  tclCom.test  tcltest.test  uplevel.test  varWin.test  xmlGen.test
lib/help/: help.tcl
lib/metadata/: teapot-metadata-read.tm
lib/misc/: pkgIndex.tcl
lib/pkggen/: teapot-package-gen-zip.tm  teapot-package-gen.tm
lib/prefdk/: pref-devkit.tm
lib/preftp/: pref-teapot.tm
lib/projectInfo/: projectInfo.tm
lib/repository/: repository-proxy.tm
lib/splash/: splash.tcl
lib/tclcompiler/: .gitignore  configure  pkgIndex.tcl.in
lib/tclparser/: configure  configure.ac
lib/tdk_appstartup/: main_std.tcl  pkgIndex.tcl
lib/teapotlink/: teapot-link.tm
lib/wrapengine/: banner.tcl  tclapp.tcl  tclapp_config.tcl  tclapp_pkg.tcl  wengine.tcl
misc/ashelp-hack-week-project/lib/ashelp/: ashelp.tcl
pkg-src/win32/: Makefile.in  configure  configure.ac  pkgIndex.tcl.in
scripts/: build_deps.sh  external_pkgs.sh  pack_deps.tcl  package_location.tcl
